refactor: 패키지 경로를 자바 컨벤션에 맞게 수정
-infra/discussionRoom -> infra/discussionroom 으로 수정
-패키지 경로 아래있던 클래스 3개
-그 클랙스를 임포트 하던 클래스들도 자동 수정